update connexion string

--- a/CheckBitcoinRate/App.config
+++ b/CheckBitcoinRate/App.config
@@ -5,8 +5,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="CheckBitcoinRate.Properties.Settings.CryptoCurrenciesConnectionString" connectionString="Data Source=DESKTOP-MSI;Initial Catalog=CryptoCurrencies;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="BitCoinContext" connectionString="data source=DESKTOP-MSI;initial catalog=CryptoCurrencies;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CheckBitcoinRate.Properties.Settings.CryptoCurrenciesConnectionString"
+      connectionString="Data Source=localhost;Initial Catalog=CryptoCurrencies;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="BitCoinContext" connectionString="data source=DESKTOP-MSI;initial catalog=CryptoCurrencies;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
