update app.config file

--- a/CheckBitcoinRate/App.config
+++ b/CheckBitcoinRate/App.config
@@ -8,7 +8,7 @@
     <add name="CheckBitcoinRate.Properties.Settings.CryptoCurrenciesConnectionString"
       connectionString="Data Source=localhost;Initial Catalog=CryptoCurrencies;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="BitCoinContext" connectionString="data source=DESKTOP-MSI;initial catalog=CryptoCurrencies;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+    <add name="BitCoinContext" connectionString="data source=localhost;initial catalog=CryptoCurrencies;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
